--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,12 @@
     --text-color: 51,51,51;
     --btn-color : 219,250,139;
     --slider: 30;
+    --bg-image-:url('/public/img/banner.png');
+    --bg-image-index:url('/public/img/index-banner.png');
+    --bg-image-contact:url('/public/img/contact-banner.png');
+    --bg-image-about:url('/public/img/about-banner.png');
+    --bg-image:var(--bg-image-);
+
 }
 
 
@@ -39,8 +45,6 @@ html {
 body {
     height: 100%;
     margin: 0;
-}
-body{
     color:  rgba(var(--text-color), 1);
     background-color: rgba(var(--bg-color), .3);
 }
@@ -51,6 +55,7 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
     font-family: 'Inconsolata', monospace;
     font-weight: 600;
+    margin: 0;
 }
 header, footer{
     font-family: 'Inconsolata', monospace;
@@ -79,7 +84,6 @@ h1 {
 
 .radial-gradient:nth-child(odd){
     background-image:
-            url('/public/img/banner.png'),
             radial-gradient(
                     circle at 100% 100%,
                     rgba(var(--bg-color), 1),
@@ -95,7 +99,6 @@ h1 {
 
 .radial-gradient:nth-child(even){
     background-image:
-            url('/public/img/banner.png'),
             radial-gradient(
                     circle at 100% 0%,
                     rgba(var(--bg-color), 1),
@@ -105,14 +108,54 @@ h1 {
                     rgba(var(--bg-color), 1),
                     rgba(var(--bg-color), 1),
                     rgba(var(--bg-color), 1)
-            );
+            )
+;
+}
+.radial-gradient:first-child{
+    background-image:
+            var(--bg-image),
+            radial-gradient(
+                    circle at 100% 100%,
+                    rgba(var(--bg-color), 1),
+                    rgba(var(--bg-color), 1),
+                    rgba(var(--bg-color), .4),
+                    rgba(var(--bg-color), 1),
+                    rgba(var(--bg-color), 1),
+                    rgba(var(--bg-color), 1),
+                    rgba(var(--bg-color), 1)
+            )
+;
 }
 
 .radial-gradient{
-    background-size: contain;
     background-repeat:no-repeat;
-    background-position: center;
+    background-position: top 1rem right 1rem;
     color: rgba(var(--btn-color), 1);
+    margin:.1rem 0;
+    padding: .3rem 1rem 1rem 1rem;
+    overflow: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.radial-gradient > div {
+    margin:.1rem 0;
+    background-image: var(--bg-image);
+    background-size:20% 100%;
+    background-repeat:no-repeat;
+    background-position: top 1rem right 1rem;
+    width: 100%;
+    padding: 1rem;
+}
+.radial-gradient:first-child > div {
+    background-image: none;
+    width: 100%;
+}
+.radial-gradient h2{
+    padding: 1rem 35% .5rem 1rem;
+}
+.radial-gradient .primary{
+    margin: .5rem 25% .5rem 1rem;
 }
 
 .perspective{
@@ -142,13 +185,68 @@ h1 {
 }
 
 
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
+
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
 
 section.container-fluid {
     font-family: 'Special Elite', cursive;
     padding: 1rem;
     /*background-color: #fff;*/
     overflow: auto;
-    height: 70vh;
+    height: 73vh;
     /*max-height: 60%;*/
     max-width: 99%;
     margin: 0 1rem 1rem 1rem;
@@ -297,22 +395,70 @@ div.error, div.success, div.info, div.warning, div.primary  {
     color: orangered;
 }
 
+@media (min-device-height: 2100px){
+    :root { --slider: 0;}
+    body{
+        font-size: 120%;
+    }
+    section.container-fluid {height: 90vh;}
+}
+
 @media (min-device-height: 1024px) {
     :root { --slider: 0;}
     section.container-fluid {height:  80vh;}
 }
 
-@media (min-device-height: 2100px){
-    :root { --slider: 0;}
-    section.container-fluid {height: 90vh;}
+@media (orientation: portrait) {
+    section.container-fluid {height:  80vh;}
 }
+@media (max-device-height: 736px) {
 
-@media (max-device-height: 576px) {
-    :root { --slider: 0;}
+        :root { --slider: 0;}
+
+    .radial-gradient:first-child{
+        background-image:
+                radial-gradient(
+                        circle at 100% 0%,
+                        rgba(var(--bg-color), 1),
+                        rgba(var(--bg-color), 1),
+                        rgba(var(--bg-color), .4),
+                        rgba(var(--bg-color), 1),
+                        rgba(var(--bg-color), 1),
+                        rgba(var(--bg-color), 1),
+                        rgba(var(--bg-color), 1)
+                )
+    ;
+    }
+
+    .radial-gradient:first-child  div{
+        height: 100%;
+        background-image: var(--bg-image);
+        background-repeat:no-repeat;
+        background-position: top 1rem right 1rem;
+        width: 100%;
+        background-size:66% 83%;
+    }
+    .radial-gradient h2{
+        padding: .5rem 35% .5rem 1rem;
+    }
     section.container-fluid {height: 60vh;}
+
+    .radial-gradient .primary{
+        margin: 1rem;
+    }
+
+    .radial-gradient {
+        height:70vmin;
+        overflow: auto;
+    }
+    .radial-gradient+.radial-gradient {
+        display: block;
+        min-height:80vh;
+    }
 }
 @media (max-device-width: 576px) {
     :root { --slider: 0;}
+
 }
 
 
