--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,11 +9,10 @@
     --text-color: 51,51,51;
     --btn-color : 219,250,139;
     --slider: 30;
-    --bg-image-:url('/public/img/banner.png');
+    --bg-image:url('/public/img/banner.png');
     --bg-image-index:url('/public/img/index-banner.png');
     --bg-image-contact:url('/public/img/contact-banner.png');
     --bg-image-about:url('/public/img/about-banner.png');
-    --bg-image:var(--bg-image-);
 
 }
 
