--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,10 +9,11 @@
     --text-color: 51,51,51;
     --btn-color : 219,250,139;
     --slider: 30;
-    --bg-image:url('/public/img/banner.png');
+    --bg-image: url('/public/img/banner.png');
     --bg-image-index:url('/public/img/index-banner.png');
     --bg-image-contact:url('/public/img/contact-banner.png');
     --bg-image-about:url('/public/img/about-banner.png');
+    --bg-image-other:url('/public/img/banner.png');
 
 }
 
@@ -24,12 +25,12 @@
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    background-color: rgba(var(--bg-color), .3);
+    background-color: rgba(var(--bg-color), .1);
     color:  rgba(var(--bg-color), 1);
 }
 
 ::-ms-input-placeholder { /* Microsoft Edge */
-    background-color: rgba(var(--bg-color), .3);
+    background-color: rgba(var(--bg-color), .1);
     color:  rgba(var(--bg-color), 1);
 }
 
@@ -37,7 +38,7 @@ html {
     height: 100%;
     margin: 0;
     color:  rgba(var(--text-color), 1);
-    background-color: rgba(var(--bg-color), .3);
+    background-color: rgba(var(--bg-color), .1);
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -45,7 +46,7 @@ body {
     height: 100%;
     margin: 0;
     color:  rgba(var(--text-color), 1);
-    background-color: rgba(var(--bg-color), .3);
+    background-color: rgba(var(--bg-color), .1);
 }
 
 
@@ -55,6 +56,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Inconsolata', monospace;
     font-weight: 600;
     margin: 0;
+    padding: 0 1rem;
 }
 header, footer{
     font-family: 'Inconsolata', monospace;
@@ -75,7 +77,7 @@ h1 {
     text-shadow: 3px 3px 0 rgba(var(--btn-color), 1), 3px 3px 0 var;
     margin :0;
     padding: 0;
-    background-image: -webkit-linear-gradient(left, #f1f1f1, darkblue,  darkblue, #D1D1C6, darkred,  darkred,  #f1f1f1);
+    background-image: -webkit-linear-gradient(left, #f1f1f1, darkblue,  darkblue, #fff, #fff, darkred,  darkred,  #f1f1f1);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     z-index: 1;
@@ -235,7 +237,7 @@ h1 {
 pre {
     white-space: pre-wrap;       /* Since CSS 2.1 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
+    /*white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
@@ -302,41 +304,46 @@ form button[type="submit"],form input[type="submit"], a.edit, a.btn {
 .project {
     padding: 0;
     margin: 1rem;
-    background-color: #f1f1f1;
+    background-color:rgba(var(--bg-color), .1);
 
 }
 
 .project  div {
     margin: 0;
-
 }
 
-.project > div {
-    padding: 1rem;
-    border: 1px dashed  rgba(var(--bg-color), 1);
-    border-top: 0;
-    background-color: #f1f1f1;
-
-}
-
-.project > div div {
-    padding: 0 .5rem;
+.project  span {
+    min-width: 25%;
+    display: inline-block;
 }
 
 
-.project>div .inline-block{
-    margin: 0 5rem;
-    text-align: justify;
-    word-spacing: .5rem;
-    line-height:1.5rem;
-    hyphens: auto;
-}
-#projects .project> div div{
-    padding: 0;
-}
+/*.project > div {*/
+/*    padding: 1rem;*/
+/*    border: 1px dashed  rgba(var(--bg-color), 1);*/
+/*    border-top: 0;*/
+/*    background-color: #f1f1f1;*/
+
+/*}*/
+
+/*.project > div div {*/
+/*    padding: 0 .5rem;*/
+/*}*/
 
 
-.project h3 {
+/*.project>div .inline-block{*/
+/*    margin: 0 5rem;*/
+/*    text-align: justify;*/
+/*    word-spacing: .5rem;*/
+/*    line-height:1.5rem;*/
+/*    hyphens: auto;*/
+/*}*/
+/*#projects .project> div div{*/
+/*    padding: 0;*/
+/*}*/
+
+
+.project h2 {
     margin: 0;
     padding: .5rem 0;
     background-color:  rgba(var(--bg-color), 1);
@@ -412,7 +419,7 @@ div.error, div.success, div.info, div.warning, div.primary  {
 }
 @media (max-device-height: 736px) {
 
-        :root { --slider: 0;}
+    :root { --slider: 0;}
 
     .radial-gradient:first-child{
         background-image:
